# IOC-cpp

./: .gitignore  CMakeLists.txt  LICENSE
src/: CMakeLists.txt  ioc_container.h  library.cpp  library.h  type_id_generator.cpp  type_id_generator.h
test/: CMakeLists.txt  ioc_test.cpp
